# agent-kit

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  PORTABILITY.md  README.md  THIRD_PARTY_NOTICES.md  manifest.yaml  pyproject.toml  release-please-config.json  render-agent-kit.py  renovate.json  requirements-dev.txt
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.claude/hooks/: kb-stop-digest.sh  kb-user-prompt-recall.sh  pre-tool-use-edit-recall.sh  pre-tool-use-git-commit-capture.sh
.codex/: hooks.json
.codex/hooks/: kb-stop-digest.sh  pre-tool-use-git-commit-capture.sh
.council/context/: constitution-digest.md  domain-glossary.md  gh-conventions.md  org-repos.md  pack.json  repo-map.md  toolchain.md
.github/workflows/: ci.yml  release.yml  repository-hygiene.yml
.specify/: .agent-kit-sdd-seed.sha256
.specify/templates/: constitution-template.md  spec-template.md  tasks-template.md
council/: README.md  council.mjs  council.py  council.toml
council/prompts/: _baseline.md  consolidator.md  correct_course.md  critic.md  design_consolidator.md  design_lens.md  design_vote.md  designer.md  grill.md  planner.md  (+12 more)
installer/: install-agents.sh  install.sh
runner-manifests/: README.md  platform-blueprints-handoff.md  runtime-package.schema.json
scripts/: build-runtime-package.sh  validate_manifest.py
tests/: test_deploy_status.py  test_github_api.py  test_prepare_rollback.py  test_validate_manifest.py
tools/: __init__.py
(+567 files in other folders)
