[project]
name = "agent-kit"
dynamic = ["version"]
requires-python = ">=3.11"
license = "LicenseRef-JorisJonkers-Proprietary-1.0"
dependencies = [
  "PyYAML>=6.0,<7",
  "requests>=2.32,<3",
]

[dependency-groups]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
  "types-PyYAML>=6.0,<7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"scripts/validate_manifest.py" = ["UP022"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["render-agent-kit.py", "scripts"]

